2013-01-03  Werner Lemberg  <wl@gnu.org>

	* src/ftdiff (event_help): Improve text.

2013-01-03  Werner Lemberg  <wl@gnu.org>

	[ftgrid] Make it work again.

	* src/ftgrid.c (grid_status_init): Don't initialize variables
	related to `display'.  Do this...
	(grid_status_display): ... in this new function instead.
	(main): Use new function to handle command line arguments before
	initializing the display.

2013-01-02  Werner Lemberg  <wl@gnu.org>

	Increase line height in help texts.

	* src/ftview.c (event_help): Increase line height.
	Improve text.
	* src/ftdiff.c (event_help), src/ftgrid.c (event_help),
	src/ftmulti.c (Help), src/ftstring.c (event_help): Increase line
	height.

2013-01-02  Werner Lemberg  <wl@gnu.org>

	[graph] Implement adjustable line height.

	* graph/grfont.c (gr_line_height): New global variable.
	(grSetLineHeight): New function.
	(grWrite): Use gr_line_height.

	* graph/grfont.h: Updated.

2013-01-02  Werner Lemberg  <wl@gnu.org>

	* src/ftview.c (write_header): Improve displayed strings.

2013-01-02  Werner Lemberg  <wl@gnu.org>

	[ftview] Better input key handling.

	* src/ftview.c (Process_Event): Don't handle key events if not
	in a mode where they change something visible.

2013-01-02  Werner Lemberg  <wl@gnu.org>

	* src/ftdiff.c (render_state_set_files): Skip non-scalable fonts.

2013-01-02  Werner Lemberg  <wl@gnu.org>

	* src/ftview.c (main) Remove redundant code.

2013-01-02  Werner Lemberg  <wl@gnu.org>

	[ftview] Redesign layout.

	It now displays all options, not only the changes, in a structured
	way.

	* src/ftview.c (START_X, START_Y): New macros.
	(INIT_SIZE): Use them.
	(status): Remove `header' and `header_buffer' members.
	(Render_Waterfall): Use START_X and START_Y.
	(event_gamma_change, event_bold_change, event_radius_change,
	event_slant_change, event_render_mode_change, Process_Event): Don't
	set `status.header'.
	(write_header): Display all options.

	(main): Updated.

2012-12-31  Werner Lemberg  <wl@gnu.org>
